--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/alceumelo/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/alceumelo/js-tdd-course#readme"
+  "homepage": "https://github.com/alceumelo/js-tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^4.19.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0"
+  }
 }
